--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html>
 <body>
 
-<h1>My First Heading</h1>
+<h1>This is my first testing</h1>
 
-<p>My first paragraph.</p>
+<p>I changed some settings.</p>
 
 </body>
 </html>
